@@ -3,7 +3,7 @@ setup.py - Setup package with the help Python's DistUtils
 
 See http://www.python-ldap.org/ for details.
 
-$Id: setup.py,v 1.72 2014/03/12 20:29:23 stroeder Exp $
+$Id: setup.py,v 1.73 2015/09/19 13:38:30 stroeder Exp $
 """
 
 has_setuptools = False
@@ -150,6 +150,7 @@ setup(
     'ldap',
     'ldap.async',
     'ldap.controls',
+    'ldap.controls.deref',
     'ldap.controls.libldap',
     'ldap.controls.openldap',
     'ldap.controls.ppolicy',
