@@ -10,6 +10,7 @@ Lib/
   argument add_ctrls which is internally passed to LDAPObject.result4()
   and lets the method also return response control along with the search 
   results.
+* Added ldap.controls.deref implementing support for dereference control
 
 Tests/
 * Unit tests for module ldif (thanks to Petr Viktorin)
@@ -1194,4 +1195,4 @@ Released 2.0.0pre02 2002-02-01
 ----------------------------------------------------------------
 Released 1.10alpha3 2000-09-19
 
-$Id: CHANGES,v 1.354 2015/09/18 20:20:32 stroeder Exp $
+$Id: CHANGES,v 1.355 2015/09/19 13:38:30 stroeder Exp $
